sassi-macros/tests/lihaaf/compile_fail/watermark_unit.rs
//! Unit is not a monotonic watermark type.

use sassi::MonotonicWatermark;

fn assert_watermark<T: MonotonicWatermark>() {}

fn main() {
    assert_watermark::<()>();
}
